# audio-denoising-eval

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
data/manifests/: dataset_manifest.csv
experiments/: _bootstrap.py  benchmark_latency.py  download_datasets.py  evaluate_all.py  export_paper_tables.py  generate_eval_noisy_set.py  prepare_data.py  preview_sample.py  train_cnn.py  train_eff.py  train_hybrid.py
src/: __init__.py  app.py
src/config/: __init__.py  audio.py  experiment.py  model.py  runtime.py
src/data/: __init__.py  acquisition.py  download.py  dynamic_mixer.py  evalset.py  manifests.py  preprocessing.py
src/eval/: __init__.py  benchmark.py  export_paper.py  interpretability.py  metrics.py  plots.py
src/inference/: __init__.py  api.py  checkpoints.py  cli.py
src/models/: __init__.py  base.py  cnn_unet.py  deepfilternet_eff.py  factory.py  transunet_audio.py
src/training/: __init__.py  loop.py  loss.py  trainer.py
src/utils/: profiling.py  seeding.py  tracking.py
