[project]
name = "audio-denoising-eval"
version = "0.1.0"
description = "Comparative benchmark of CNN, hybrid, and efficient audio denoising architectures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.15.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mlflow>=3.6.0",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
    "pyppeteer>=2.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "torchvision>=0.24.1",
    "yt-dlp>=2026.2.4",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "nbformat>=5.10.4",
    "pandadoc>=0.1.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ty.src]
include = ["src", "experiments"]
